src/objects/ICD_Codes__c/ICD_Codes__c.object-meta.xml
<CustomObject>
    <label>ICD-Codes</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ICD Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ICD-Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>