src/objects/ICD_Codes__c/fields/CCM_Test_Data__c.field-meta.xml
<CustomField>
    <fullName>CCM_Test_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use for Testing</label>
    <type>Checkbox</type>
</CustomField>