src/objects/ICD_Codes__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Active Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>