src/objects/ICD_Codes__c/fields/HCC_Code__c.field-meta.xml
<CustomField>
    <fullName>HCC_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HCC Code</label>
    <referenceTo>HCC_Codes__c</referenceTo>
    <relationshipLabel>ICD-Codes</relationshipLabel>
    <relationshipName>ICD_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>