src/objects/ICD_Codes__c/fields/ICD_Description__c.field-meta.xml
<CustomField>
    <fullName>ICD_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ICD Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>