src/objects/ICD_Codes__c/fields/ICD_Version__c.field-meta.xml
<CustomField>
    <fullName>ICD_Version__c</fullName>
    <label>ICD Indicator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>