src/objects/ICD_Codes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HCC_Code__c</columns>
    <columns>ICD_Description__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Effective_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>